--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
@@ -20,15 +20,55 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-  </head>
-  <body ng-app="starter">
+</head>
+<body ng-app="starter" ng-cloak>
 
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
-  </body>
+<ion-pane>
+    <div class="bar bar-header bar-positive">
+        <h1 class="text-center title urban-title"><i class="icon ion-university"></i> Urban Speak</h1>
+    </div>
+    <ion-content>
+        <div ng-controller="MainController">
+            <div ng-if="online == false">
+                <p style="background: darkred; color: #fff; padding: 10px; margin: 10px;">You need internet connection
+                    to
+                    use this service.</p>
+            </div>
+            <section ng-if="online">
+                <form ng-submit="search(form)" class="search-form">
+                    <div class="list list-inset">
+                        <label class="item item-input">
+                            <i class="icon ion-search placeholder-icon"></i>
+                            <input type="text" placeholder="Search for a term ( eg. jejemon )" ng-model="form.q"
+                                   required>
+                        </label>
+                    </div>
+                </form>
+                <div class="container">
+                    <div class="list list-inset results-list" ng-if="results">
+                        <p>We have found <strong>{{count}}</strong> results </p>
+                        <ion class="item item-text-wrap" ng-repeat="list in lists">
+                            <h1>{{list.word | uppercase}}</h1>
+                            <p>{{list.definition}}</p>
+                            <hr>
+                            <p>Example:
+                            <blockquote>{{list.example | limitTo:letterLimit}}</blockquote>
+                            </p>
+                            <p><strong>by: {{list.author}}</strong> | <i class="ion ion-thumbsup"></i>
+                                {{list.thumbs_up}} |
+                                <i class="ion ion-thumbsdown"></i> {{list.thumbs_down}}</p>
+                        </ion>
+                        <p ng-if="noresult" class="alert alert-warning">No results. Try again.</p>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </ion-content>
+    <div class="bar bar-footer bar-stable">
+        <div class="title urban-footer"><a href="http://jsdecena.me">Urban Speak by <strong>Jsd</strong></a> | &copy;
+            2016
+        </div>
+    </div>
+</ion-pane>
+</body>
 </html>
