--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
 </head>
-<body ng-app="starter" ng-cloak>
+<body ng-app="starter" ng-cloak="">
 
 <ion-pane>
     <div class="bar bar-header bar-positive">
@@ -39,8 +39,7 @@
                     <div class="list list-inset">
                         <label class="item item-input">
                             <i class="icon ion-search placeholder-icon"></i>
-                            <input type="text" placeholder="Search for a term ( eg. jejemon )" ng-model="form.q"
-                                   required>
+                            <input type="text" placeholder="Search for a term ( eg. jejemon )" ng-model="form.q" required>
                         </label>
                     </div>
                 </form>
